      were ghosts in the revision ancestry. (John Arbash Meinel, #209948)

  DOCUMENTATION:

    * Document outlining strategies for TortoiseBzr. (Mark Hammond)

  TESTING:

    * New helper function for splitting test suites
      ``split_suite_by_condition``. (Robert Collins)

  INTERNALS:

    * Implement xml8 serializer.  (Aaron Bentley)

  API BREAKS:

    * Repository.get_data_stream, Repository.get_data_stream_for_search(),
      Repository.get_deltas_for_revsions(), Repository.revision_trees(),
      Repository.item_keys_introduced_by() no longer take read locks.
      (Aaron Bentley)

    * The methods on ``VersionedFile`` deprecated before bzrlib 1.5 have been
      removed. (Robert Collins)

    * ``VersionedFile.join`` is deprecated. This method required local
      instances of both versioned file objects and was thus hostile to being
      used for streaming from a smart server. The new get_record_stream and
      insert_record_stream are meant to efficiently replace this method.
      (Robert Collins)


bzr 1.4rc2 2008-04-21
---------------------

  BUG FIXES:

    * ``bzr log -r ..X bzr://`` was failing, because it was getting a request
      for ``revision_id=None`` which was not a string.
      (John Arbash Meinel, #211661)

    * Fixed a bug in handling ghost revisions when logging changes in a 
      particular file.  (John Arbash Meinel, #209948)

    * Fix error about "attempt to add line-delta in non-delta knit".
      (Andrew Bennetts, #205156)

    * Fixed performance degradation in fetching from knit repositories to
      knits and packs due to parsing the entire revisions.kndx on every graph
      walk iteration fixed by using the Repository.get_graph API.  There was
      another regression in knit => knit fetching which re-read the index for
      every revision each side had in common.
      (Robert Collins, John Arbash Meinel)


bzr 1.4rc1 2008-04-11
---------------------



bzr 1.4rc1 2008-04-11
---------------------
